--- a/views/designers.jade
+++ b/views/designers.jade
@@ -2,3 +2,6 @@ extends layout
 
 block content
   h1= title
+  ul
+    for designer in designers
+      li #{designer.firstname} #{designer.lastname}
