--- a/views/new_designer.jade
+++ b/views/new_designer.jade
@@ -5,15 +5,15 @@ block content
   form(name='addDesigner', method='post', action='/add-designer').new-form
     ul
       li
-        label(for='firstName') Name
+        label(for='firstname') First Name
         input(type='text', id='firstname', name='firstname')
 
       li
-        label(for='lastname') Designer
+        label(for='lastname') Last Name
         input(type='text', id='lastname', name='lastname')
 
       li
-        label(for='bio') Year
+        label(for='bio') Bio
         textarea(cols='60', rows='10', id='bio', name='bio')
 
     button(type='submit') Save
