--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -2,27 +2,29 @@ body {
   padding: 50px;
   font-family: 'Roboto', sans-serif;
 }
-
 a {
-  color: #00B7FF;
+  color: #00b7ff;
 }
-
 .temporary {
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  color: gray;
+  color: #808080;
   margin: auto;
   height: 200px;
   text-align: center;
   position: absolute;
 }
-
 .temporary h1 {
   font-weight: 200;
 }
-
 .temporary p {
   text-transform: capitalize;
+}
+.new-form li {
+  list-style: none;
+}
+.new-form li label {
+  display: block;
 }
