--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,7 +2,7 @@ doctype html
 html(lang="en")
   head
     title Famous Furniture Design
-    link(rel='stylesheet', href='/styles/style.css', type='text/css')
+    link(rel='stylesheet', href='/styles/#{alias}.css', type='text/css')
     link(href='http://fonts.googleapis.com/css?family=Roboto:400,300,100,500,700,900', rel='stylesheet', type='text/css')
     script.
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -15,3 +15,8 @@ html(lang="en")
 
   body
     block content
+
+  block scripts
+    script(src='//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
+    script(src='//ajax.googleapis.com/ajax/libs/jqueryui/1.11.0/jquery-ui.min.js')
+    script(src='/javascripts/#{alias}.js')
