--- a/styles/home.styl
+++ b/styles/home.styl
@@ -2,6 +2,11 @@ body
   padding 50px
   font-family 'Roboto', sans-serif
 
+.login
+  top 5px
+  left 5px
+  position absolute
+
 a
   color #00B7FF
 
