--- a/views/home.jade
+++ b/views/home.jade
@@ -8,3 +8,18 @@ block content
   .temporary
     h1 famousfurnituredesign.com
     p is changing and will be back soon.
+
+  #slider
+    ul#slide-container
+      li
+        img(src='/images/Ball-Chair.jpg')
+      li
+        img(src='/images/Barcelona-Chair.jpg')
+      li
+        img(src='/images/Egg-Chair.jpg')
+      li
+        img(src='/images/Eames-Lounge-Chair.jpg')
+      li
+        img(src='/images/Lounge-Chair-Wood.jpg')
+      li
+        img(src='/images/Swan-Chair.jpg')
