--- a/styles/home.styl
+++ b/styles/home.styl
@@ -11,21 +11,16 @@ a
   color #00B7FF
 
 .temporary
-  top 0
-  left 0
-  right 0
-  bottom 0
   color gray
   margin auto
   height 200px
   text-align center
-  position absolute
 
-.temporary h1
-  font-weight 200
+  h1
+    font-weight 200
 
-.temporary p
-  text-transform capitalize
+  p
+    text-transform capitalize
 
 .new-form
   li
@@ -33,3 +28,14 @@ a
 
     label
       display block
+
+#slider
+  overflow hidden
+
+  ul
+    display block
+    padding-left 0px
+
+    li
+      list-style none
+      display inline-block
