--- a/styles/home.styl
+++ b/styles/home.styl
@@ -13,7 +13,7 @@ a
 .temporary
   color gray
   margin auto
-  height 200px
+  height 120px
   text-align center
 
   h1
@@ -30,6 +30,7 @@ a
       display block
 
 #slider
+  margin auto
   overflow hidden
 
   ul
