--- a/styles/home.styl
+++ b/styles/home.styl
@@ -1,3 +1,5 @@
+@import 'base'
+
 body
   padding 50px
   font-family 'Roboto', sans-serif
@@ -24,8 +26,6 @@ a
 
 .new-form
   li
-    list-style none
-
     label
       display block
 
@@ -35,8 +35,6 @@ a
 
   ul
     display block
-    padding-left 0px
 
     li
-      list-style none
       display inline-block
