--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -1,3 +1,9 @@
+ul {
+  padding-left: 0px;
+}
+ul li {
+  list-style: none;
+}
 body {
   padding: 50px;
   font-family: 'Roboto', sans-serif;
@@ -22,9 +28,6 @@ a {
 .temporary p {
   text-transform: capitalize;
 }
-.new-form li {
-  list-style: none;
-}
 .new-form li label {
   display: block;
 }
@@ -34,9 +37,7 @@ a {
 }
 #slider ul {
   display: block;
-  padding-left: 0px;
 }
 #slider ul li {
-  list-style: none;
   display: inline-block;
 }
