--- a/views/overview_panel.jade
+++ b/views/overview_panel.jade
@@ -12,4 +12,5 @@ block content
   ul
     for designer in designers
       li #{designer.firsname} #{designer.lastname}
+        a(href='/update-designer/' + designer._id).update Update
         a(href='', did=designer._id).delete-designer Delete
