--- a/styles/overview_panel.styl
+++ b/styles/overview_panel.styl
@@ -1,1 +1,13 @@
 @import 'base'
+
+.list
+  margin-bottom 50px
+  border-top 1px solid
+
+  p
+    margin 6px
+    width 300px
+    display inline-block
+
+  a
+    margin-right 10px
