--- a/public/styles/furniture.css
+++ b/public/styles/furniture.css
@@ -1,6 +1,81 @@
+body {
+  margin-top: 0px;
+  font-family: 'Roboto', sans-serif;
+}
+.login {
+  top: 5px;
+  right: 5px;
+  position: absolute;
+}
+.login a {
+  color: #00b7ff;
+  margin: 3px 5px;
+}
 ul {
   padding-left: 0px;
 }
 ul li {
   list-style: none;
+}
+a {
+  text-decoration: none;
+}
+.wrap {
+  margin: auto;
+  width: 880px;
+}
+#menu {
+  background-color: #fff;
+}
+#menu ul {
+  margin: 0px;
+}
+#menu ul li {
+  padding: 10px;
+  display: inline-block;
+}
+.thumb-list li {
+  margin: 10px 20px;
+  position: relative;
+  display: inline-block;
+  border: 1px solid #e4e4e4;
+}
+.thumb-list li a {
+  color: #000;
+}
+.thumb-list li p {
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  opacity: 0;
+  margin: auto;
+  height: 15px;
+  font-size: 21px;
+  text-align: center;
+  position: absolute;
+  -webkit-transition: opacity 0.3s ease-in-out;
+  -moz-transition: opacity 0.3s ease-in-out;
+  -o-transition: opacity 0.3s ease-in-out;
+  transition: opacity 0.3s ease-in-out;
+}
+.thumb-list li .thumb {
+  -webkit-transition: opacity 0.3s ease-in-out;
+  -moz-transition: opacity 0.3s ease-in-out;
+  -o-transition: opacity 0.3s ease-in-out;
+  transition: opacity 0.3s ease-in-out;
+}
+.thumb-list li:hover .thumb {
+  opacity: 0.2;
+  -webkit-transition: opacity 0.2s ease-in-out;
+  -moz-transition: opacity 0.2s ease-in-out;
+  -o-transition: opacity 0.2s ease-in-out;
+  transition: opacity 0.2s ease-in-out;
+}
+.thumb-list li:hover p {
+  opacity: 1;
+  -webkit-transition: opacity 0.2s ease-in-out;
+  -moz-transition: opacity 0.2s ease-in-out;
+  -o-transition: opacity 0.2s ease-in-out;
+  transition: opacity 0.2s ease-in-out;
 }
