--- a/public/styles/overview_panel.css
+++ b/public/styles/overview_panel.css
@@ -1,6 +1,48 @@
+body {
+  margin-top: 0px;
+  font-family: 'Roboto', sans-serif;
+}
+.login {
+  top: 5px;
+  right: 5px;
+  position: absolute;
+}
+.login a {
+  color: #00b7ff;
+  margin: 3px 5px;
+}
 ul {
   padding-left: 0px;
 }
 ul li {
   list-style: none;
+}
+a {
+  text-decoration: none;
+}
+.wrap {
+  margin: auto;
+  width: 880px;
+}
+#menu {
+  background-color: #fff;
+}
+#menu ul {
+  margin: 0px;
+}
+#menu ul li {
+  padding: 10px;
+  display: inline-block;
+}
+.list {
+  margin-bottom: 50px;
+  border-top: 1px solid;
+}
+.list p {
+  margin: 6px;
+  width: 300px;
+  display: inline-block;
+}
+.list a {
+  margin-right: 10px;
 }
