--- a/styles/base.styl
+++ b/styles/base.styl
@@ -1,5 +1,41 @@
+body
+  margin-top 0px
+  font-family 'Roboto', sans-serif
+
+.login
+  top 5px
+  right 5px
+  position absolute
+
+  a
+    color #00B7FF
+    margin 3px 5px
+
 ul
   padding-left 0px
 
   li
     list-style none
+
+a
+  text-decoration none
+
+.wrap
+  margin auto
+  width 880px
+
+#menu
+  background-color #fff
+
+  ul
+    margin 0px
+
+    li
+      padding 10px
+      display inline-block
+
+transition(property, time)
+  -webkit-transition property time ease-in-out
+  -moz-transition property time ease-in-out
+  -o-transition property time ease-in-out
+  transition property time ease-in-out
