--- a/styles/furniture.styl
+++ b/styles/furniture.styl
@@ -1,1 +1,36 @@
 @import 'base'
+
+.thumb-list
+  li
+    margin 10px 20px
+    position relative
+    display inline-block
+    border 1px solid #E4E4E4
+
+    a
+      color #000
+
+    p
+      top 0
+      left 0
+      right 0
+      bottom 0
+      opacity 0
+      margin auto
+      height 15px
+      font-size 21px
+      text-align center
+      position absolute
+      transition(opacity, 0.3s)
+
+    .thumb
+      transition(opacity, 0.3s)
+
+    &:hover
+      .thumb
+        opacity 0.2
+        transition(opacity, 0.2s)
+
+      p
+        opacity 1
+        transition(opacity, 0.2s)
