--- a/views/layout.jade
+++ b/views/layout.jade
@@ -14,13 +14,24 @@ html(lang="en")
       ga('send', 'pageview');
 
   body
-    if (user)
-      .login
-        span #{user.username}
-        a(href="/logout") Logout
-        a(href='/new-furniture') new F
-        a(href='/new-designer') new D
-    block content
+    header.wrap
+      if (user)
+        .login
+          span #{user.username}
+          a(href="/logout") Logout
+          a(href='/new-furniture') new F
+          a(href='/new-designer') new D
+          a(href='/overview-panel') OP
+      #menu
+        ul
+          li
+            a(href='/') Home
+          li
+            a(href='/furniture') Furniture
+          li
+            a(href='/designers') Designers
+    #container.wrap
+      block content
 
   block scripts
     script(src='//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
