--- a/views/overview_panel.jade
+++ b/views/overview_panel.jade
@@ -2,15 +2,17 @@ extends layout
 
 block content
   a(href='/new-furniture') New Furniture
-  ul
+  ul.list
     for peace in furniture
-      li #{peace.name}
+      li
+        p #{peace.name}
         a(href='/update-furniture/' + peace._id).update Update
         a(href='', fid=peace._id).delete-furn Delete
 
   a(href='/new-designer') New Designer
-  ul
+  ul.list
     for designer in designers
-      li #{designer.firsname} #{designer.lastname}
+      li
+        p #{designer.firsname} #{designer.lastname}
         a(href='/update-designer/' + designer._id).update Update
         a(href='', did=designer._id).delete-designer Delete
