--- a/views/layout.jade
+++ b/views/layout.jade
@@ -22,6 +22,7 @@ html(lang="en")
           a(href='/new-furniture') new F
           a(href='/new-designer') new D
           a(href='/overview-panel') OP
+      #logo famous furniture design
       #menu
         ul
           li
