--- a/views/furniture_page.jade
+++ b/views/furniture_page.jade
@@ -1,6 +1,6 @@
 extends layout
 
 block content
-  h1= furniture.name
+  //- h1= furniture.name
   img(src=furniture.image_url)
   p= furniture.description
