--- a/public/styles/designers.css
+++ b/public/styles/designers.css
@@ -43,3 +43,41 @@ a {
   padding: 10px;
   display: inline-block;
 }
+.thumb-list ul {
+  margin-top: 0px;
+}
+.thumb-list li {
+  min-width: 250px;
+  min-height: 100px;
+  margin: 10px 20px;
+  position: relative;
+  display: inline-block;
+  border: 1px solid #e4e4e4;
+}
+.thumb-list li a {
+  color: #000;
+}
+.thumb-list li p {
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  opacity: 0.5;
+  margin: auto;
+  height: 15px;
+  font-size: 21px;
+  line-height: 13px;
+  text-align: center;
+  position: absolute;
+  -webkit-transition: opacity 0.3s ease-in-out;
+  -moz-transition: opacity 0.3s ease-in-out;
+  -o-transition: opacity 0.3s ease-in-out;
+  transition: opacity 0.3s ease-in-out;
+}
+.thumb-list li:hover p {
+  opacity: 1;
+  -webkit-transition: opacity 0.2s ease-in-out;
+  -moz-transition: opacity 0.2s ease-in-out;
+  -o-transition: opacity 0.2s ease-in-out;
+  transition: opacity 0.2s ease-in-out;
+}
