--- a/styles/designers.styl
+++ b/styles/designers.styl
@@ -1,1 +1,35 @@
 @import 'base'
+
+.thumb-list
+  ul
+    margin-top 0px
+
+  li
+    min-width 250px
+    min-height 100px
+    margin 10px 20px
+    position relative
+    display inline-block
+    border 1px solid #E4E4E4
+
+    a
+      color #000
+
+    p
+      top 0
+      left 0
+      right 0
+      bottom 0
+      opacity 0.5
+      margin auto
+      height 15px
+      font-size 21px
+      line-height 13px
+      text-align center
+      position absolute
+      transition(opacity, 0.3s)
+
+    &:hover
+      p
+        opacity 1
+        transition(opacity, 0.2s)
