--- a/public/styles/new_furniture.css
+++ b/public/styles/new_furniture.css
@@ -20,11 +20,20 @@ ul li {
 a {
   text-decoration: none;
 }
+#logo {
+  float: left;
+  display: block;
+  font-size: 58px;
+  font-weight: 100;
+}
 .wrap {
   margin: auto;
   width: 880px;
 }
 #menu {
+  float: right;
+  display: block;
+  margin-top: 34px;
   background-color: #fff;
 }
 #menu ul {
