--- a/views/furniture_page.jade
+++ b/views/furniture_page.jade
@@ -2,5 +2,6 @@ extends layout
 
 block content
   //- h1= furniture.name
-  img(src=furniture.image_url)
+  .furniture-image
+    img(src=furniture.image_url)
   p= furniture.description
