--- a/public/styles/furniture.css
+++ b/public/styles/furniture.css
@@ -2,6 +2,11 @@ body {
   margin-top: 0px;
   font-family: 'Roboto', sans-serif;
 }
+body .header {
+  overflow: auto;
+  display: block;
+  margin-bottom: 35px;
+}
 .login {
   top: 5px;
   right: 5px;
@@ -19,6 +24,10 @@ ul li {
 }
 a {
   text-decoration: none;
+}
+p {
+  font-weight: 200;
+  white-space: pre-line;
 }
 #logo {
   float: left;
