--- a/styles/base.styl
+++ b/styles/base.styl
@@ -1,6 +1,17 @@
+transition(property, time)
+  -webkit-transition property time ease-in-out
+  -moz-transition property time ease-in-out
+  -o-transition property time ease-in-out
+  transition property time ease-in-out
+
 body
   margin-top 0px
   font-family 'Roboto', sans-serif
+
+  .header
+    overflow auto
+    display block
+    margin-bottom 35px
 
 .login
   top 5px
@@ -21,6 +32,7 @@ a
   text-decoration none
 
 p
+  font-weight 200
   white-space pre-line
 
 #logo
@@ -46,8 +58,11 @@ p
       padding 10px
       display inline-block
 
-transition(property, time)
-  -webkit-transition property time ease-in-out
-  -moz-transition property time ease-in-out
-  -o-transition property time ease-in-out
-  transition property time ease-in-out
+      a
+        transition(color, 0.2s)
+        color #4B5364
+
+        &:hover
+          transition(color, 0.3s)
+          color #76BDFF
+
