--- a/styles/base.styl
+++ b/styles/base.styl
@@ -12,6 +12,7 @@ body
     overflow auto
     display block
     margin-bottom 35px
+    border-bottom 1px solid #E0E0E0
 
 .login
   top 5px
@@ -38,7 +39,8 @@ p
 #logo
   float left
   display block
-  font-size 58px
+  font-size 36px
+  margin-top 20px
   font-weight 100
 
 .wrap
@@ -57,6 +59,9 @@ p
     li
       padding 10px
       display inline-block
+
+      &:last-of-type
+        padding-right 0px
 
       a
         transition(color, 0.2s)
