add meta description support

--- a/public/styles/new_designer.css
+++ b/public/styles/new_designer.css
@@ -1,6 +1,74 @@
+body {
+  margin-top: 0px;
+  font-family: 'Roboto', sans-serif;
+}
+body .header {
+  height: 76px;
+  overflow: auto;
+  display: block;
+  margin-bottom: 35px;
+  border-bottom: 1px solid #e0e0e0;
+}
+.login {
+  top: 5px;
+  right: 5px;
+  position: absolute;
+}
+.login a {
+  color: #00b7ff;
+  margin: 3px 5px;
+}
 ul {
   padding-left: 0px;
 }
 ul li {
   list-style: none;
+}
+a {
+  text-decoration: none;
+}
+p {
+  font-weight: 200;
+  white-space: pre-line;
+}
+#logo {
+  float: left;
+  display: block;
+  font-size: 36px;
+  margin-top: 20px;
+  font-weight: 100;
+}
+.wrap {
+  margin: auto;
+  width: 880px;
+}
+#menu {
+  float: right;
+  display: block;
+  margin-top: 34px;
+  background-color: #fff;
+}
+#menu ul {
+  margin: 0px;
+}
+#menu ul li {
+  padding: 10px;
+  display: inline-block;
+}
+#menu ul li:last-of-type {
+  padding-right: 0px;
+}
+#menu ul li a {
+  -webkit-transition: color 0.2s ease-in-out;
+  -moz-transition: color 0.2s ease-in-out;
+  -o-transition: color 0.2s ease-in-out;
+  transition: color 0.2s ease-in-out;
+  color: #4b5364;
+}
+#menu ul li a:hover {
+  -webkit-transition: color 0.3s ease-in-out;
+  -moz-transition: color 0.3s ease-in-out;
+  -o-transition: color 0.3s ease-in-out;
+  transition: color 0.3s ease-in-out;
+  color: #76bdff;
 }
