--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,7 @@ doctype html
 html(lang="en")
   head
     title= title
+    meta(name='description', content='#{metaDescription}')
     link(rel='stylesheet', href='/styles/#{alias}.css', type='text/css')
     link(href='http://fonts.googleapis.com/css?family=Roboto:400,300,100,500,700,900', rel='stylesheet', type='text/css')
     script.
