--- a/public/styles/furniture.css
+++ b/public/styles/furniture.css
@@ -3,6 +3,7 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 body .header {
+  height: 76px;
   overflow: auto;
   display: block;
   margin-bottom: 35px;
