--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -3,9 +3,11 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 body .header {
+  height: 76px;
   overflow: auto;
   display: block;
   margin-bottom: 35px;
+  border-bottom: 1px solid #e0e0e0;
 }
 .login {
   top: 5px;
@@ -32,7 +34,8 @@ p {
 #logo {
   float: left;
   display: block;
-  font-size: 58px;
+  font-size: 36px;
+  margin-top: 20px;
   font-weight: 100;
 }
 .wrap {
@@ -51,6 +54,9 @@ p {
 #menu ul li {
   padding: 10px;
   display: inline-block;
+}
+#menu ul li:last-of-type {
+  padding-right: 0px;
 }
 #menu ul li a {
   -webkit-transition: color 0.2s ease-in-out;
