--- a/views/home.jade
+++ b/views/home.jade
@@ -15,3 +15,5 @@ block content
         img(src='/images/Lounge-Chair-Wood.jpg')
       li
         img(src='/images/Swan-Chair.jpg')
+
+  p A quick guide to some of the most famous furniture designs and designers that created these peaces of art. Most of the furniture featured on this site was created arround mid 20th century. They stand through time and their design has become iconic. These peaces seamlesly fit in todays interiors alongside furniture designed today. They have influenced the furniture that is being made now.
