--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,6 +3,7 @@ html(lang="en")
   head
     title= title
     meta(name='description', content='#{metaDescription}')
+    meta(name='viewport', content="width=device-width, initial-scale=1")
     link(rel='stylesheet', href='/styles/#{alias}.css', type='text/css')
     link(href='http://fonts.googleapis.com/css?family=Roboto:400,300,100,500,700,900', rel='stylesheet', type='text/css')
     script.
