responsive top nav and designers

--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -1,9 +1,8 @@
 body {
-  margin-top: 0px;
-  margin-bottom: 80px;
+  margin: 0px 15px 80px;
   font-family: 'Roboto', sans-serif;
 }
-body .header {
+.header {
   height: 76px;
   overflow: auto;
   display: block;
@@ -72,6 +71,21 @@ p {
   -o-transition: color 0.3s ease-in-out;
   transition: color 0.3s ease-in-out;
   color: #76bdff;
+}
+@media screen and (max-width: 620px) {
+  .header {
+    height: 100px;
+  }
+  #logo {
+    float: none;
+    margin-top: 15px;
+    text-align: center;
+  }
+  #menu {
+    float: none;
+    width: 237px;
+    margin: 0 auto;
+  }
 }
 .new-form li label {
   display: block;
