--- a/views/designers.jade
+++ b/views/designers.jade
@@ -5,4 +5,4 @@ block content
     for designer in designers
       li
         a(href='/designers/' + designer.url)
-          p #{designer.firstname} #{designer.lastname}
+          span #{designer.firstname} #{designer.lastname}
