--- a/public/styles/designer_page.css
+++ b/public/styles/designer_page.css
@@ -1,9 +1,8 @@
 body {
-  margin-top: 0px;
-  margin-bottom: 80px;
+  margin: 0px 15px 80px;
   font-family: 'Roboto', sans-serif;
 }
-body .header {
+.header {
   height: 76px;
   overflow: auto;
   display: block;
@@ -41,7 +40,7 @@ p {
 }
 .wrap {
   margin: auto;
-  width: 880px;
+  max-width: 880px;
 }
 #menu {
   float: right;
@@ -72,4 +71,24 @@ p {
   -o-transition: color 0.3s ease-in-out;
   transition: color 0.3s ease-in-out;
   color: #76bdff;
+}
+@media screen and (max-width: 620px) {
+  .header {
+    height: 100px;
+  }
+  #logo {
+    float: none;
+    margin-top: 15px;
+    text-align: center;
+  }
+  #menu {
+    float: none;
+    width: 237px;
+    margin: 0 auto;
+  }
+}
+@media screen and (max-width: 380px) {
+  #logo {
+    font-size: 8.4vw;
+  }
 }
