--- a/styles/designers.styl
+++ b/styles/designers.styl
@@ -14,23 +14,24 @@
 
     a
       color #000
+      height 100px
       display block
 
-    p
+    span
       top 0
       left 0
       right 0
       bottom 0
       opacity 0.5
       margin auto
-      height 15px
       font-size 21px
-      line-height 13px
+      font-weight 200
+      line-height 100px
       text-align center
       position absolute
       transition(opacity, 0.3s)
 
     &:hover
-      p
+      span
         opacity 1
         transition(opacity, 0.2s)
