--- a/public/styles/furniture.css
+++ b/public/styles/furniture.css
@@ -72,6 +72,52 @@ p {
   transition: color 0.3s ease-in-out;
   color: #76bdff;
 }
+.thumb-list ul {
+  margin-top: 0px;
+}
+.thumb-list li {
+  min-width: 250px;
+  min-height: 100px;
+  margin: 10px 20px;
+  position: relative;
+  display: inline-block;
+  border: 1px solid #e4e4e4;
+}
+.thumb-list li a {
+  color: #000;
+  height: 100px;
+  display: block;
+}
+.thumb-list li span {
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  opacity: 0.5;
+  margin: auto;
+  font-size: 21px;
+  font-weight: 200;
+  line-height: 100px;
+  text-align: center;
+  position: absolute;
+  -webkit-transition: opacity 0.3s ease-in-out;
+  -moz-transition: opacity 0.3s ease-in-out;
+  -o-transition: opacity 0.3s ease-in-out;
+  transition: opacity 0.3s ease-in-out;
+}
+.thumb-list li:hover span {
+  opacity: 1;
+  -webkit-transition: opacity 0.2s ease-in-out;
+  -moz-transition: opacity 0.2s ease-in-out;
+  -o-transition: opacity 0.2s ease-in-out;
+  transition: opacity 0.2s ease-in-out;
+}
+@media screen and (max-width: 910px) {
+  .thumb-list li {
+    width: 45%;
+    margin: 1% 2%;
+  }
+}
 @media screen and (max-width: 620px) {
   .header {
     height: 100px;
@@ -87,41 +133,26 @@ p {
     margin: 0 auto;
   }
 }
+@media screen and (max-width: 585px) {
+  .thumb-list li {
+    width: 95%;
+  }
+}
 @media screen and (max-width: 380px) {
   #logo {
     font-size: 8.4vw;
   }
 }
-.thumb-list ul {
-  margin-top: 0px;
-}
-.thumb-list li {
-  margin: 10px 20px;
-  position: relative;
-  display: inline-block;
-  border: 1px solid #e4e4e4;
-}
 .thumb-list li a {
-  color: #000;
-  display: block;
+  height: 150px;
 }
-.thumb-list li p {
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+.thumb-list li a span {
   opacity: 0;
-  margin: auto;
-  height: 15px;
-  font-size: 21px;
-  text-align: center;
-  position: absolute;
-  -webkit-transition: opacity 0.3s ease-in-out;
-  -moz-transition: opacity 0.3s ease-in-out;
-  -o-transition: opacity 0.3s ease-in-out;
-  transition: opacity 0.3s ease-in-out;
+  line-height: 150px;
 }
 .thumb-list li .thumb {
+  margin: auto;
+  display: block;
   -webkit-transition: opacity 0.3s ease-in-out;
   -moz-transition: opacity 0.3s ease-in-out;
   -o-transition: opacity 0.3s ease-in-out;
@@ -134,7 +165,7 @@ p {
   -o-transition: opacity 0.2s ease-in-out;
   transition: opacity 0.2s ease-in-out;
 }
-.thumb-list li:hover p {
+.thumb-list li:hover span {
   opacity: 1;
   -webkit-transition: opacity 0.2s ease-in-out;
   -moz-transition: opacity 0.2s ease-in-out;
