--- a/public/styles/furniture_page.css
+++ b/public/styles/furniture_page.css
@@ -1,9 +1,8 @@
 body {
-  margin-top: 0px;
-  margin-bottom: 80px;
+  margin: 0px 15px 80px;
   font-family: 'Roboto', sans-serif;
 }
-body .header {
+.header {
   height: 76px;
   overflow: auto;
   display: block;
@@ -41,7 +40,7 @@ p {
 }
 .wrap {
   margin: auto;
-  width: 880px;
+  max-width: 880px;
 }
 #menu {
   float: right;
@@ -72,6 +71,77 @@ p {
   -o-transition: color 0.3s ease-in-out;
   transition: color 0.3s ease-in-out;
   color: #76bdff;
+}
+.thumb-list ul {
+  margin-top: 0px;
+}
+.thumb-list li {
+  min-width: 250px;
+  min-height: 100px;
+  margin: 10px 20px;
+  position: relative;
+  display: inline-block;
+  border: 1px solid #e4e4e4;
+}
+.thumb-list li a {
+  color: #000;
+  height: 100px;
+  display: block;
+}
+.thumb-list li span {
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  opacity: 0.5;
+  margin: auto;
+  font-size: 21px;
+  font-weight: 200;
+  line-height: 100px;
+  text-align: center;
+  position: absolute;
+  -webkit-transition: opacity 0.3s ease-in-out;
+  -moz-transition: opacity 0.3s ease-in-out;
+  -o-transition: opacity 0.3s ease-in-out;
+  transition: opacity 0.3s ease-in-out;
+}
+.thumb-list li:hover span {
+  opacity: 1;
+  -webkit-transition: opacity 0.2s ease-in-out;
+  -moz-transition: opacity 0.2s ease-in-out;
+  -o-transition: opacity 0.2s ease-in-out;
+  transition: opacity 0.2s ease-in-out;
+}
+@media screen and (max-width: 910px) {
+  .thumb-list li {
+    width: 45%;
+    margin: 1% 2%;
+  }
+}
+@media screen and (max-width: 620px) {
+  .header {
+    height: 100px;
+  }
+  #logo {
+    float: none;
+    margin-top: 15px;
+    text-align: center;
+  }
+  #menu {
+    float: none;
+    width: 237px;
+    margin: 0 auto;
+  }
+}
+@media screen and (max-width: 585px) {
+  .thumb-list li {
+    width: 95%;
+  }
+}
+@media screen and (max-width: 380px) {
+  #logo {
+    font-size: 8.4vw;
+  }
 }
 .furniture-image {
   height: 405px;
