--- a/styles/base.styl
+++ b/styles/base.styl
@@ -72,6 +72,48 @@ p
           transition(color, 0.3s)
           color #76BDFF
 
+.thumb-list
+  ul
+    margin-top 0px
+
+  li
+    min-width 250px
+    min-height 100px
+    margin 10px 20px
+    position relative
+    display inline-block
+    border 1px solid #E4E4E4
+
+    a
+      color #000
+      height 100px
+      display block
+
+    span
+      top 0
+      left 0
+      right 0
+      bottom 0
+      opacity 0.5
+      margin auto
+      font-size 21px
+      font-weight 200
+      line-height 100px
+      text-align center
+      position absolute
+      transition(opacity, 0.3s)
+
+    &:hover
+      span
+        opacity 1
+        transition(opacity, 0.2s)
+
+@media screen and (max-width 910px)
+  .thumb-list
+    li
+      width 45%
+      margin 1% 2%
+
 @media screen and (max-width 620px)
   .header
     height 100px
@@ -85,6 +127,12 @@ p
     float none
     width 237px
     margin 0 auto
+
+@media screen and (max-width 585px)
+  .thumb-list
+    li
+      width 95%
+
 
 @media screen and (max-width 380px)
   #logo
