--- a/styles/furniture.styl
+++ b/styles/furniture.styl
@@ -1,33 +1,17 @@
 @import 'base'
 
 .thumb-list
-  ul
-    margin-top 0px
-
   li
-    margin 10px 20px
-    position relative
-    display inline-block
-    border 1px solid #E4E4E4
-
     a
-      color #000
-      display block
+      height 150px
 
-    p
-      top 0
-      left 0
-      right 0
-      bottom 0
-      opacity 0
-      margin auto
-      height 15px
-      font-size 21px
-      text-align center
-      position absolute
-      transition(opacity, 0.3s)
+      span
+        opacity 0
+        line-height 150px
 
     .thumb
+      margin auto
+      display block
       transition(opacity, 0.3s)
 
     &:hover
@@ -35,6 +19,6 @@
         opacity 0.2
         transition(opacity, 0.2s)
 
-      p
+      span
         opacity 1
         transition(opacity, 0.2s)
